chatwoot/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatwoot-web
  labels:
    app: chatwoot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatwoot
      role: web
  template:
    metadata:
      labels:
        app: chatwoot
        role: web
    spec:
      serviceAccountName: chatwoot
      containers:
        - name: chatwoot-web
          image: chatwoot/chatwoot:v4.12.1
          imagePullPolicy: IfNotPresent
          command:
            - docker/entrypoints/rails.sh
          args:
            - bundle
            - exec
            - rails
            - s
            - -p
            - "3000"
            - -b
            - 0.0.0.0
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
          volumeMounts:
            - name: cache
              mountPath: /app/tmp
      volumes:
        - name: cache
          emptyDir: {}
