chatwoot/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatwoot
spec:
  type: ClusterIP
  selector:
    app: chatwoot
    role: web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
